--- a/public/styles.css
+++ b/public/styles.css
@@ -35,3 +35,20 @@ img{
     width:200px;
     height:200px;
 }
+#no{
+    background-color: rgb(207, 230, 106);
+        text-align:center;
+}
+p{
+    font-family: Arial, Helvetica, sans-serif;
+   }
+.bring{
+    font-family: Arial, Helvetica, sans-serif;
+}
+#wazi{
+    background-color:skyblue;
+    text-align:center;
+}
+.kabisa{
+    text-align:center;
+}
